--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome To</h1>
-    <h2>Peter Parker World</h2>
-    <h4>Build Climber and Train Stopper</h4>
-    <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-    <a href="#">Hire Me</a>
-    <img src="images/jhankar.png" alt="Jhankar Mahbub Image">
+    <section id="profile" class="profile">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h2><span class="profile-name">Peter Parker</span> World</h2>
+            <h4>Build Climber and Train Stopper</h4>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <a href="#">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="Jhankar Mahbub Image">
+        </div>
+    </section>
 </body>
 </html>
