--- a/index.html
+++ b/index.html
@@ -20,5 +20,16 @@
             <img src="images/jhankar.png" alt="Jhankar Mahbub Image">
         </div>
     </section>
+    <section id="dream-big" class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="Jhankar Mahbub Images">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h4>Become a web developer</h4>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a href="#">Download Resume</a>
+        </div>
+    </section>
 </body>
 </html>
