--- a/index.html
+++ b/index.html
@@ -32,15 +32,24 @@
         </div>
     </section>
     <section id="experience" class="experience">
-        <div class="single-exp">
-            <h2>Full Stack Web Developer</h2>
-            <h5>2021-Present | Pro Level Developer</h5>
-            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
-        </div>
-        <div class="single-exp">
-            <h2>Baby Web Developer</h2>
-            <h5>2020-2021 | Programming Hero Learner</h5>
-            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        <h1>My Experience</h1>
+        <div class="experience-col">
+            <div class="single-exp">
+                <div class="single-exp-bg">
+                    <h3>Full Stack Web Developer</h3>
+                    <h5>2021-Present | Pro Level Developer</h5>
+                    <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+                </div>
+                
+            </div>
+            
+                <div class="single-exp">
+                    <div class="single-exp-bg single-exp-bg-green ">
+                        <h3>Baby Web Developer</h3>
+                        <h5>2020-2021 | Programming Hero Learner</h5>
+                        <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+                    </div>
+                </div>
         </div>
     </section>
 </body>
