All Updated Code

--- a/index.html
+++ b/index.html
@@ -52,5 +52,8 @@
                 </div>
         </div>
     </section>
+    <footer class="footer" id="footer">
+        <p>&copy; This website Copyright By Shuvo Das</p>
+    </footer>
 </body>
 </html>
